@@ -421,7 +421,7 @@ enum {
   SPVM_NATIVE_C_BASIC_TYPE_ID_LONG_OBJECT,
   SPVM_NATIVE_C_BASIC_TYPE_ID_FLOAT_OBJECT,
   SPVM_NATIVE_C_BASIC_TYPE_ID_DOUBLE_OBJECT,
-  SPVM_NATIVE_C_BASIC_TYPE_ID_TYPE_CONVERSION_CONDITINAL_OBJECT,
+  SPVM_NATIVE_C_BASIC_TYPE_ID_BOOL_OBJECT,
 };
 
 enum {
