@@ -2,8 +2,11 @@
   [Changes]
     * Add [Changes] hedding to the Changes file that is generated by spvmdist.
     * Non-native method must have its block.
-  [BUG FIX]
+  [Bug Fix]
     * Fix the bug that the linker output twice to stdout and stderr. Suppress stdout.
+  [Incompatible Bug Fix]
+    * Fix a regression bug that SPVM_NATIVE_C_BASIC_TYPE_ID_BOO_OBJECT is chagned
+      to SPVM_NATIVE_C_BASIC_TYPE_ID_TYPE_CONVERSION_CONDITINAL_OBJECT wrongly.
 0.9619 2022-07-07
   [New Featres]
     * Add --user-name option to spvmdist command.
